# CloakCode

./: .dockerignore  .gitignore  .markdownlint.jsonc  .npmrc  .pre-commit-config.yaml  .prettierignore  LICENSE  README.md  SECURITY.md  Taskfile.yml  design.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  poetry.toml  pyproject.toml  tsconfig.base.json  vitest.coverage.d.mts  vitest.coverage.mjs
.devcontainer/: devcontainer.json  post-create.sh
.github/: .markdownlint.jsonc  copilot-instructions.md  dependabot.yml
.github/agents/: cloakcode-guardrails.agent.md
.github/prompts/: cloakcode-resume.prompt.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  pre-commit-autoupdate.yml  prepare-release.yml  release.yml
docs/: 01-vision-and-requirements.md  02-research-findings.md  02.1-messaging.md  02.2-turn-tracking.md  02.3-tool-call-handling.md  02.4-storage-and-logs.md  02.5-session-state.md  02.6-large-session-tailing.md  03-architecture.md  04-security-and-compliance.md  05-roadmap-and-open-questions.md  06-field-notes.md  07-deployment.md  README.md
mockups/: index.html
research/: README.md  inspect_session.py  list_sessions.py
scripts/: changelog.mjs  docker-gateway.sh  release.mjs  set-version.mjs  strip-lockfile-tarballs.sh
